--- a/_data/members.yml
+++ b/_data/members.yml
@@ -3,7 +3,7 @@
   bio: >
     François is a software engineer specialized in production rendering and high-end visualization software.
     He joined mental images in 2004 where he designed and implemented the next generation of CPU raytracing
-    technology of mental ray and RealityServer. Since 2008 he is writing custom VFX software for production
+    technology of mental ray and RealityServer. Since 2008 he is writing VFX software for production
     houses. François started writing appleseed in 2009 and is the project leader. He is also the author of
     toxic, an early open source global illumination renderer released in 2003. François lives in Annecy, France.
   links:
