updated Team page.

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -61,3 +61,15 @@
     of appleseed and Houdini as well as adding Open Shading Language support to Houdini. Hans lives in Delft,
     The Netherlands.
 
+
+- name: Luis Barrancos
+  picture: luis_barrancos.jpg
+  bio: >
+    Luis is a cool guy! He lives in Kuala Lumpur, Malaysia.
+
+
+- name: Thomas Arthus
+  picture: thomas_arthus.jpg
+  bio: >
+    Thomas is a cool guy! He lives in Annecy, France.
+
