prefer https links.

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -2,7 +2,7 @@
   url: "https://cloud.githubusercontent.com/assets/321290/2713456/16f83e26-c4e7-11e3-8f3d-d136cad3379e.png"
 
 - type: vimeo
-  url: "http://player.vimeo.com/video/66799467"
+  url: "https://player.vimeo.com/video/66799467"
 
 - type: vimeo
-  url: "http://player.vimeo.com/video/81199785"
+  url: "https://player.vimeo.com/video/81199785"
