added Forum menu item.

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -10,6 +10,9 @@
 - label: Team
   url: "/team.html"
 
+- label: Forum
+  url: "http://forum.appleseedhq.net/"
+
 - label: Wiki
   url: "https://github.com/appleseedhq/appleseed/wiki"
 
