added alt attribute on carousel images.

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,5 +1,6 @@
 - type: image
   url: "https://cloud.githubusercontent.com/assets/321290/2713456/16f83e26-c4e7-11e3-8f3d-d136cad3379e.png"
+  alt: "appleseed.studio Screenshot"
 
 - type: vimeo
   url: "https://player.vimeo.com/video/66799467"
