the forum is now accessible via https.

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -11,7 +11,7 @@
   url: "/team.html"
 
 - label: Forum
-  url: "http://forum.appleseedhq.net/"
+  url: "https://forum.appleseedhq.net/"
 
 - label: Wiki
   url: "https://github.com/appleseedhq/appleseed/wiki"
