--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -3,7 +3,7 @@
   alt: "appleseed.studio Screenshot"
 
 - type: vimeo
-  url: "https://player.vimeo.com/video/66799467"
+  url: "https://vimeo.com/appleseedhq/fetchaveryshortfilm"
 
 - type: vimeo
   url: "https://player.vimeo.com/video/81199785"
