--- a/_data/members.yml
+++ b/_data/members.yml
@@ -16,7 +16,7 @@
     Esteban is a software engineer and VFX artist with more than 15 years of experience. He was the main
     developer of the Ramen compositor first released in 2009. He started working on appleseed in 2012, doing
     general maintenance, linux specific maintenance, python bindings and lately, adding support for Open Shading
-    Language shaders. Esteban lives in Kuala Lumpur, Malaysia.
+    Language shaders. Esteban lives in Madrid, Spain.
   links:
     - { label: Blog, url: "http://inappropiateresponse.blogspot.fr/" }
 
