added fluffy cornell box image to front page carousel.

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -7,3 +7,7 @@
 
 - type: vimeo
   url: "https://player.vimeo.com/video/81199785"
+
+- type: image
+  url: "/img/fluffycornellbox.jpg"
+  alt: "Fluffy Cornell Box"
