first live version of appleseedhq.net's new website.

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -35,3 +35,14 @@
 
     For his GSoC project, Marius implemented a new editor in appleseed.studio for layered materials based on
     Disney's BRDF model.
+
+
+- name: Thomas Arthus
+  picture: thomas_arthus.jpg
+  role: Web Designer
+  bio: >
+    Thomas is a web programmer by day and an electronic music composer and DJ by night. He has also been playing
+    cello for 25 years. Thomas designed the previous version of the appleseed web site.
+
+
+    He lives in Annecy, France.
