--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1,3 +1,12 @@
+- version: 1.1.0-beta
+  date: January 26th, 2015
+  github: https://github.com/appleseedhq/appleseed/releases/tag/1.1.0-beta
+  builds:
+    - platform: windows
+      url: https://github.com/appleseedhq/appleseed/releases/download/1.1.0-beta/appleseed-1.1.0-beta-0-g369e747-win64-vs110.zip
+    - platform: linux
+      url: https://github.com/appleseedhq/appleseed/releases/download/1.1.0-beta/appleseed-1.1.0-beta-0-g369e747-linux64-gcc4.zip
+
 - version: 1.1.0 alpha-23
   date: October 25th, 2014
   github: https://github.com/appleseedhq/appleseed/releases/tag/1.1.0-alpha-23
