--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -36,3 +36,6 @@
 
 - url: "/img/renders/thomas-heightfield.png"
   legend: "A scene from forum user @Thomas"
+
+- url: "/img/renders/galoot.png"
+  legend: "A scene from forum user @ohsnapitsjoel"
