--- a/_data/tutorials.yml
+++ b/_data/tutorials.yml
@@ -1,7 +1,13 @@
 - title: Getting Started
-  url: "/docs/gettingstarted.html"
+  url: "/docs/tutorials/gettingstarted.html"
   image: "/img/docs/cornellbox.jpg"
   description: >
     The very basics: downloading and installing appleseed,
     starting up appleseed.studio and rendering the built-in
     Cornell Box scene.
+
+- title: Render Layers
+  url: "/docs/tutorials/renderlayers.html"
+  image: "/img/docs/regexp-render-layer-dialog.png"
+  description: >
+    A quick and incomplete tutorial on how to use render layers.
