added bedroom render.

--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -39,3 +39,6 @@
 
 - url: "/img/renders/galoot.png"
   legend: "A scene from forum user @ohsnapitsjoel"
+
+- url: "/img/renders/bedroom.png"
+  legend: "The Bedroom scene from 3dRender.com Lighting Challenge #21"
