--- a/_data/animations.yml
+++ b/_data/animations.yml
@@ -25,6 +25,10 @@
   video: "//player.vimeo.com/video/109894596?color=f60&title=0&byline=0&portrait=0"
   legend: "Experimental 'Frozen Display' mode in appleseed.studio"
 
-- thumbnail: "//i.vimeocdn.com/video/510513031_640.jpg"
-  video: "//player.vimeo.com/video/121917016?color=f60&title=0&byline=0&portrait=0"
-  legend: "Interactive lookdev with appleseed inside Image Engine's Gaffer"
+- thumbnail: "//i.vimeocdn.com/video/518464756_640.jpg"
+  video: "//player.vimeo.com/video/127622613?color=f60&title=0&byline=0&portrait=0"
+  legend: "Interactive lookdev inside appleseed.studio"
+
+- thumbnail: "//i.vimeocdn.com/video/516057899_640.jpg"
+  video: "//player.vimeo.com/video/125823120?color=f60&title=0&byline=0&portrait=0"
+  legend: "Interactive lookdev with appleseed inside Image Engine's Gaffer (update #2)"
