--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1,3 +1,12 @@
+- version: 1.2.0-beta
+  date: June 14th, 2015
+  github: "https://github.com/appleseedhq/appleseed/releases/tag/1.2.0-beta"
+  builds:
+    - platform: windows
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.2.0-beta/appleseed-1.2.0-beta-0-g7cc9ec1-win64-vs120.zip"
+    - platform: linux
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.2.0-beta/appleseed-1.2.0-beta-0-g7cc9ec1-linux64-gcc48-py27.zip"
+
 - version: 1.1.0-beta
   date: January 26th, 2015
   github: "https://github.com/appleseedhq/appleseed/releases/tag/1.1.0-beta"
