appleseed 1.3.0-beta release

--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -45,3 +45,18 @@
 
 - url: "/img/renders/sss-indirect-mosaic.png"
   legend: "Indirect lighting through a translucent medium"
+
+- url: "/img/renders/emily1.png"
+  legend: "Digital Emily 2 from the Wikihuman Project"
+
+- url: "/img/renders/emily2.png"
+  legend: "Digital Emily 2 from the Wikihuman Project"
+
+- url: "/img/renders/legocharacter1.png"
+  legend: "LEGO&reg; Character"
+
+- url: "/img/renders/legocharacter2.png"
+  legend: "LEGO&reg; Character"
+
+- url: "/img/renders/rose.png"
+  legend: "A carnivorous flower made of raw chicken meat"
