--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1,3 +1,20 @@
+- version: 1.3.0-beta
+  date: November 3rd, 2015
+  github: "https://github.com/appleseedhq/appleseed/releases/tag/1.3.0-beta"
+  builds:
+    - platform: windows
+      label: Windows Vista<br>and Later
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.3.0-beta/appleseed-1.3.0-beta-0-ge138a1b-win64-vs120.zip"
+    - platform: windows
+      label: Windows Vista<br>and Later (SSE 4.2)
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.3.0-beta/appleseed-1.3.0-beta-0-ge138a1b-win64-vs120-sse42.zip"
+    - platform: osx
+      label: OS X 10.10 (Yosemite)<br>and Later
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.3.0-beta/appleseed-1.3.0-beta-0-ge138a1b-mac64-clang.zip"
+    - platform: linux
+      label: Linux
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.3.0-beta/appleseed-1.3.0-beta-2-ge138a1b-linux64-gcc48-py27.zip"
+
 - version: 1.2.0-beta
   date: June 14th, 2015
   github: "https://github.com/appleseedhq/appleseed/releases/tag/1.2.0-beta"
