--- a/_data/scenes.yml
+++ b/_data/scenes.yml
@@ -1,15 +1,23 @@
-- name: Material Tester 1.0
-  image: "/img/scenes/material_tester.jpg"
-  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/material_tester_1.0.zip"
+- name: Digital Emily
+  image: "/img/scenes/emily.jpg"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/emily_1.0.zip"
 
-- name: Disney Material 1.0
-  image: "/img/scenes/disney_material.jpg"
-  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/disney_material_1.0.zip"
+- name: Bedroom
+  image: "/img/scenes/bedroom.jpg"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/bedroom_1.0.zip"
 
-- name: Fluffy Cornell Box 1.0
+- name: Rose
+  image: "/img/scenes/rose.jpg"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/rose_1.0.zip"
+
+- name: Fluffy Cornell Box
   image: "/img/scenes/fluffy_cornell_box.jpg"
   url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/fluffy_cornell_box_1.0.zip"
 
-- name: Bedroom 1.0
-  image: "/img/scenes/bedroom.jpg"
-  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/bedroom_1.0.zip"
+- name: Material Tester
+  image: "/img/scenes/material_tester.jpg"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/material_tester_1.0.zip"
+
+- name: Disney Material
+  image: "/img/scenes/disney_material.jpg"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/disney_material_1.0.zip"
