Add news history

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,10 @@
   area: download
   url: "/download.html"
 
+- label: News
+  area: news
+  url: "/news.html"
+
 - label: Docs
   area: docs
   url: "/docs.html"
