--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1,3 +1,20 @@
+- version: 1.4.0-beta
+  date: April 1st, 2016
+  github: "https://github.com/appleseedhq/appleseed/releases/tag/1.4.0-beta"
+  builds:
+    - platform: windows
+      label: Windows Vista<br>and Later (SSE 4.2)
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.4.0-beta/appleseed-1.4.0-beta-0-g42ba647-win64-vs120-sse42.zip"
+    - platform: windows
+      label: Windows Vista<br>and Later
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.4.0-beta/appleseed-1.4.0-beta-0-g42ba647-win64-vs120.zip"
+    - platform: osx
+      label: OS X 10.10 (Yosemite)<br>and Later
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.4.0-beta/appleseed-1.4.0-beta-0-g42ba647-mac64-clang.zip"
+    - platform: linux
+      label: Linux (SSE 4.2)
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.4.0-beta/appleseed-1.4.0-beta-0-g42ba647-linux64-gcc48-py27-sse42.zip"
+
 - version: 1.3.0-beta
   date: November 3rd, 2015
   github: "https://github.com/appleseedhq/appleseed/releases/tag/1.3.0-beta"
