--- a/_data/scenes.yml
+++ b/_data/scenes.yml
@@ -1,14 +1,14 @@
 - name: Digital Emily
   image: "/img/scenes/emily.jpg"
-  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/emily/emily_1.1.zip"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.4.0-beta/emily_1.2.zip"
 
 - name: Bedroom
   image: "/img/scenes/bedroom.jpg"
-  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/bedroom_1.0.zip"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.4.0-beta/bedroom_1.1.zip"
 
 - name: Rose
   image: "/img/scenes/rose.jpg"
-  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/rose_1.0.zip"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.4.0-beta/rose_1.1.zip"
 
 - name: Fluffy Cornell Box
   image: "/img/scenes/fluffy_cornell_box.jpg"
@@ -16,8 +16,12 @@
 
 - name: Material Tester
   image: "/img/scenes/material_tester.jpg"
-  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/material_tester_1.0.zip"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.4.0-beta/material_tester_1.1.zip"
 
 - name: Disney Material
   image: "/img/scenes/disney_material.jpg"
   url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.0/disney_material_1.0.zip"
+
+- name: Whisky Glass
+  image: "/img/scenes/whisky_glass.jpg"
+  url: "https://github.com/appleseedhq/appleseed-scenes/releases/download/1.4.0-beta/whisky_glass_1.0.zip"
