--- a/_data/externalprojects.yml
+++ b/_data/externalprojects.yml
@@ -46,11 +46,11 @@
 
 - name: Haggi Krey
   picture: haggi_krey.jpg
-  role: mayaToAppleseed (Maya Integration)
+  role: appleseed-maya (Maya Integration)
   bio: >
     Haggi is a freelance VFX supervisor. He worked on music videos such as Sven Väth's "The beauty and the beast"
     and on animated movies such as "Back to Gaya", "Impy's Island", "Impy's Wonderland", "Animals United" or
-    "Tarzan". Haggi is the author of mayaToAppleseed, a native integration of appleseed into Maya. 
+    "Tarzan". Haggi is the author of appleseed-maya (formerly mayaToAppleseed), a native integration of appleseed into Maya. 
     
     
     Haggi has studied graphics design in Hannover, Germany where he still lives.
@@ -60,7 +60,7 @@
 
 - name: Hans Hoogenboom
   picture: hans_hoogenboom.jpg
-  role: houseed (Houdini Expoorter)
+  role: houseed (Houdini Exporter)
   bio: >
     Hans is an architect with a strong interest in CG and VFX. In 2014 he started working on the integration
     of appleseed and Houdini as well as adding Open Shading Language support to Houdini.
