Add new renders

--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -60,3 +60,9 @@
 
 - url: "/img/renders/rose.png"
   legend: "A carnivorous flower made of raw chicken meat"
+
+- url: "/img/renders/design_glasses.png"
+  legend: "A set of design glasses inspired by Fferrone's Revolution glassware collection"
+
+- url: "/img/renders/jar_jar_bean.png"
+  legend: "A cleverly named jar of candies"
