Tweak 1.6.0-beta Windows release title

--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -3,7 +3,7 @@
   github: "https://github.com/appleseedhq/appleseed/releases/tag/1.6.0-beta"
   builds:
     - platform: windows
-      label: Windows Vista<br>and Later (SSE 4.2, VS 2015 build)
+      label: Windows Vista<br>and Later (SSE 4.2)
       url: "https://github.com/appleseedhq/appleseed/releases/download/1.6.0-beta/appleseed-1.6.0-beta-0-gb18a9fe-win64-vs140-sse42.zip"
     - platform: osx
       label: macOS 10.10 (Yosemite, SSE 2)<br>and Later
