Tweak role title

--- a/_data/coreteam.yml
+++ b/_data/coreteam.yml
@@ -1,6 +1,6 @@
 - name: François Beaune
   picture: francois_beaune.jpg
-  role: Project Founder / Team Lead
+  role: Project Founder
   bio: >
     François is a software engineer specialized in production rendering and high-end visualization software.
     He joined mental images in 2004 where he designed and implemented the next generation of CPU ray tracing
